# YT.JudgeBookCover

./: .gitignore  README.md  conda.yaml  detect_objects.py  populate_db.py  pyproject.toml
judge/db/: __init__.py
