[tool.poetry]
name = "judge"
version = "1.0.0"
description = "AI judges a book by its cover"
authors = ["Arian Bakh <arian@noklabs.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.17.8"
pandas = "^2.2.3"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
