[tool.poetry]
name = "judge"
version = "1.0.0"
description = "AI judges a book by its cover"
authors = ["Arian Bakh <arian@noklabs.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
jupyter = "^1.1.1"
tinydb = "^4.8.2"
tqdm = "^4.67.1"
ultralytics = "^8.3.38"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
